--- a/public/members.html
+++ b/public/members.html
@@ -1304,14 +1304,8 @@
 
 document.addEventListener('DOMContentLoaded', function() {
     // Configuration - FIXED: Correct API URL
-    const API_BASE_URL = 'http://localhost:5000/api'; // FIXED: Changed from 3000 to 5000
-    const API_ENDPOINTS = {
-        executives: `${API_BASE_URL}/members/executives`, // FIXED: Removed extra /api
-        // Note: These endpoints don't exist in your backend, we'll use executives data
-        committeeHeads: `${API_BASE_URL}/members/executives`, // Use executives as fallback
-        allMembers: `${API_BASE_URL}/members` // This requires authentication
-    };
-
+    const API_BASE_URL = 'https://nuesa-biu.onrender.com/api';
+    
     // State
     let membersData = {
         executives: [],
