--- a/admin/adlog.html
+++ b/admin/adlog.html
@@ -515,7 +515,7 @@
 
     <script>
     // Configuration
-    const API_BASE_URL = 'http://localhost:5000/api';
+    const API_BASE_URL = 'https://nuesa-biu.onrender.com/api';
     
     // DOM Elements
     const loginForm = document.getElementById('loginForm');
