--- a/public/events.html
+++ b/public/events.html
@@ -1207,7 +1207,7 @@
 
     <script>
     // API Configuration - FIXED: Correct port
-    const API_BASE_URL = 'http://localhost:5000/api';
+    const API_BASE_URL = 'https://nuesa-biu.onrender.com/api';
     
     // Utility Functions
     function formatDate(dateString) {
