--- a/public/index.html
+++ b/public/index.html
@@ -1606,7 +1606,7 @@
 
     <script>
     document.addEventListener('DOMContentLoaded', function() {
-        const API_BASE_URL = 'http://localhost:5000/api';
+        const API_BASE_URL = 'https://nuesa-biu.onrender.com/api';
         
         // ==================== NAVIGATION & UI FUNCTIONS ====================
         
