--- a/public/news.html
+++ b/public/news.html
@@ -1198,7 +1198,7 @@
     <script>
     document.addEventListener('DOMContentLoaded', function() {
         // Constants - FIXED: Correct API URL
-        const API_BASE_URL = 'http://localhost:5000/api';
+        const API_BASE_URL = 'https://nuesa-biu.onrender.com/api';
         
         // DOM Elements
         const mobileMenuBtn = document.getElementById('mobileMenuBtn');
