--- a/public/members.html
+++ b/public/members.html
@@ -1304,7 +1304,7 @@
 
 document.addEventListener('DOMContentLoaded', function() {
     // Configuration - FIXED: Correct API URL
-    const API_BASE_URL = 'https://nuesa-biu.onrender.com/api';
+    const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com/api';
     
     // State
     let membersData = {
