--- a/public/resources.html
+++ b/public/resources.html
@@ -1426,7 +1426,7 @@
 
     <script>
     // PostgreSQL Database API Configuration - FIXED: Correct port
-    const API_BASE_URL = 'https://nuesa-biu.onrender.com/api';
+    const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com/api';
     
     // Application State
     const appState = {
