--- a/admin/dash.html
+++ b/admin/dash.html
@@ -1785,7 +1785,7 @@
 
 <script>
     // ==================== CONFIGURATION ====================
-    const API_BASE_URL = 'https://nuesa-biu.onrender.com/api';
+    const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com/api';
     let authToken = localStorage.getItem('authToken');
     let currentUser = null;
     let currentMemberId = null;
