--- a/public/index.html
+++ b/public/index.html
@@ -1594,7 +1594,7 @@
 
             <div class="footer-bottom">
                 <p class="font-mono text-xs text-slate-400">
-                    © 2024 NUESA BIU Chapter. All rights reserved.
+                    © 2026 NUESA BIU. All rights reserved.
                 </p>
                 <div class="footer-bottom-links">
                     <a href="#">Privacy Policy</a>
