--- a/public/resources.html
+++ b/public/resources.html
@@ -1382,7 +1382,6 @@
                 <div class="footer-section">
                     <h4>Departments</h4>
                     <ul class="footer-links">
-                        <li><span>Computer Engineering</span></li>
                         <li><span>Electrical/Electronics</span></li>
                         <li><span>Mechanical Engineering</span></li>
                         <li><span>Civil Engineering</span></li>
@@ -1414,7 +1413,7 @@
 
             <div class="footer-bottom">
                 <p class="font-mono text-xs text-slate-400">
-                    © 2024 NUESA BIU Chapter. All rights reserved.
+                    © 2026 NUESA BIU. All rights reserved.
                 </p>
                 <div class="footer-bottom-links">
                     <a href="#">Privacy Policy</a>
