--- a/public/contacts.html
+++ b/public/contacts.html
@@ -1395,7 +1395,7 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-        const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com/api';
+        const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com';
         const mobileNav = document.getElementById('mobileNav');
         const mobileMenuBtn = document.getElementById('mobileMenuBtn');
         const contactForm = document.getElementById('contactForm');
