--- a/public/index.html
+++ b/public/index.html
@@ -1606,7 +1606,7 @@
 
     <script>
     document.addEventListener('DOMContentLoaded', function() {
-        const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com/api';
+        const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com';
         
         // ==================== NAVIGATION & UI FUNCTIONS ====================
         
