--- a/public/news.html
+++ b/public/news.html
@@ -1197,7 +1197,7 @@
     <script>
     document.addEventListener('DOMContentLoaded', function() {
         // Constants - FIXED: Correct API URL
-        const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com/api';
+        const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com';
         
         // DOM Elements
         const mobileMenuBtn = document.getElementById('mobileMenuBtn');
