--- a/public/resources.html
+++ b/public/resources.html
@@ -1425,7 +1425,7 @@
 
     <script>
     // PostgreSQL Database API Configuration - FIXED: Correct port
-    const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com/api';
+    const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com';
     
     // Application State
     const appState = {
