--- a/public/members.html
+++ b/public/members.html
@@ -1675,8 +1675,10 @@
                 return 'Secretary General';
             }
             
-            // Assistant Secretary General - THIS NOW CATCHES "Secretary General Assistant"
-            if ((lowerPos.includes('assistant') || lowerPos.includes('asst') || lowerPos.includes('deputy')) && 
+            // Assistant Secretary General
+            if ((lowerPos.includes('assistant') || 
+                lowerPos.includes('asst') || 
+                lowerPos.includes('deputy')) && 
                 lowerPos.includes('secretary')) {
                 return 'Assistant Secretary General';
             }
