--- a/public/resources.html
+++ b/public/resources.html
@@ -1450,7 +1450,7 @@ const appState = {
             name: 'Course Registration Portal',
             description: 'Quick access to the university portal',
             icon: 'file-alt',
-            action: () => window.open('https://portal.biu.edu.ng', '_blank', 'noopener,noreferrer')
+            action: () => window.open('https://portal.biu.edu.ng/Students/Login', '_blank', 'noopener,noreferrer')
         },
         {
             name: 'Unit Converter',
@@ -1506,7 +1506,7 @@ const appState = {
                 },
                 {
                     title: 'BIU Student Portal',
-                    url: 'https://portal.biu.edu.ng',
+                    url: 'https://portal.biu.edu.ng/Students/Login',
                     description: 'University student portal'
                 }
             ]
@@ -2210,7 +2210,7 @@ function showAcademicCalendar() {
                     <div class="calendar-placeholder">
                         <i class="fas fa-calendar-alt"></i>
                         <p>Check the university portal for the latest academic calendar.</p>
-                        <button onclick="window.open('https://portal.biu.edu.ng', '_blank', 'noopener,noreferrer')"
+                        <button onclick="window.open('https://portal.biu.edu.ng/Students/Login', '_blank', 'noopener,noreferrer')"
                                 class="btn-primary">
                             Go to University Portal
                         </button>
