--- a/admin/adlog.html
+++ b/admin/adlog.html
@@ -762,9 +762,10 @@
             
             const response = await fetch(`${API_BASE_URL}/api/admin/login`, {
                 method: 'POST',
+                credentials: 'include',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Accept': 'application/json'
+                    'X-CSRF-Token': csrfToken 
                 },
                 body: JSON.stringify({ 
                     email: email.toLowerCase().trim(),
