--- a/admin/adlog.html
+++ b/admin/adlog.html
@@ -764,8 +764,7 @@
                 method: 'POST',
                 credentials: 'include',
                 headers: {
-                    'Content-Type': 'application/json',
-                    'X-CSRF-Token': csrfToken 
+                    'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({ 
                     email: email.toLowerCase().trim(),
