--- a/admin/adlog.html
+++ b/admin/adlog.html
@@ -771,8 +771,7 @@
                     password: password,
                     rememberMe: rememberMe
                 }),
-                mode: 'cors',
-                credentials: 'include'
+                mode: 'cors'
             });
             
             console.log('Response status:', response.status);
