--- a/admin/adlog.html
+++ b/admin/adlog.html
@@ -760,18 +760,21 @@
             console.log('Logging in:', email);
             console.log('Sending to:', `${API_BASE_URL}/api/admin/login`);
             
+            // First get CSRF token
+            const tokenResponse = await fetch('/api/admin/csrf-token', {
+                credentials: 'include'
+            });
+            const { csrfToken } = await tokenResponse.json();
+
+            // Then use it in login
             const response = await fetch(`${API_BASE_URL}/api/admin/login`, {
                 method: 'POST',
                 credentials: 'include',
                 headers: {
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/json',
+                    'X-CSRF-Token': csrfToken
                 },
-                body: JSON.stringify({ 
-                    email: email.toLowerCase().trim(),
-                    password: password,
-                    rememberMe: rememberMe
-                }),
-                mode: 'cors'
+                body: JSON.stringify({ email, password })
             });
             
             console.log('Response status:', response.status);
