--- a/admin/adlog.html
+++ b/admin/adlog.html
@@ -436,7 +436,7 @@
         hideAlert();
         
         try {
-            const response = await fetch(`${API_BASE_URL}/api/admin/login`, {
+            const response = await fetch(`${API_BASE_URL}/admin/login`, {
                 method: 'POST',
                 credentials: 'include',
                 headers: {
