--- a/admin/adlog.html
+++ b/admin/adlog.html
@@ -475,10 +475,8 @@
         spinnerIcon.classList.remove('hidden');
         hideAlert();
         
-        try {
-            console.log('📡 Sending login request to:', `${API_BASE_URL}/api/admin/login`);
-            
-            const response = await fetch(`${API_BASE_URL}/api/admin/login`, {
+        try {            
+            const response = await fetch(`${API_BASE_URL}/api/admin-login`, {
                 method: 'POST',
                 credentials: 'include', // CRITICAL for cookies
                 headers: {
