--- a/admin/adlog.html
+++ b/admin/adlog.html
@@ -543,7 +543,7 @@
                 showAlert('Login successful! Redirecting...', 'success');
                 
                 setTimeout(() => {
-                    window.location.href = '/admin/dashboard';
+                    window.location.href = '/admin/dash';
                 }, 1500);
             } else {
                 console.error('❌ Invalid response format:', data);
