--- a/admin/dash.html
+++ b/admin/dash.html
@@ -1782,10 +1782,11 @@
     </div>
 
 <script>
-    // ==================== CONFIGURATION ====================
-    const API_BASE_URL = window.location.origin; // Use current origin instead of hardcoded URL
+    // ============================================
+    // CONFIGURATION - FIXED
+    // ============================================
+    const API_BASE_URL = 'https://nuesa-biu-pjp0.onrender.com';
     
-    // Get admin token from cookie (handles '=' in cookie values such as JWTs)
     function getAdminToken() {
         const cookies = document.cookie ? document.cookie.split(';') : [];
         for (let cookie of cookies) {
