--- a/admin/adlog.html
+++ b/admin/adlog.html
@@ -421,7 +421,7 @@
                 const data = await response.json();
                 if (data.status === 'success' && data.data) {
                     console.log('✅ Existing session found, redirecting to dashboard');
-                    window.location.href = '/admin/dashboard';
+                    window.location.href = '/admin/dash';
                     return;
                 }
             }
@@ -543,7 +543,7 @@
                 showAlert('Login successful! Redirecting...', 'success');
                 
                 setTimeout(() => {
-                    window.location.href = '/admin/dash';
+                    window.location.href = '/admin/dash.html';
                 }, 1500);
             } else {
                 console.error('❌ Invalid response format:', data);
